# too-much-spare-time-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md
migrations/: V1__initial.sql
src/: config.rs  main.rs
